Fix nav/svg overlap on mobile

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -135,7 +135,6 @@ nav {
     position: fixed;
     z-index: 2;
     text-transform: uppercase;
-    background: white;
     padding: 0 10px;
     
     #mini-logo {
